<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/skin"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/mask" />


                <CheckBox
                    android:id="@+id/skin_care_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="false"
                    android:text="@string/skin_care"
                    android:textColor="@color/black"
                    android:textSize="13dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/hair"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/hair_mask" />


                <CheckBox
                    android:id="@+id/hair_care_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="false"
                    android:text="@string/hair_care"
                    android:textColor="@color/black"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/body_w"
                    android:padding="15dp"
                    android:src="@drawable/body_wight" />

                <CheckBox
                    android:id="@+id/body_care_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="false"
                    android:text="wether"
                    android:textColor="@color/black"
                    android:textSize="13dp" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/skin"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/skin_type"
                android:textColor="@color/pink"
                android:textSize="13dp" />


        <RadioGroup
            android:id="@+id/redio_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:textColor="@color/pink">

            <RadioButton
                android:id="@+id/oil_skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil"
                android:textColor="@color/gray"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/sensitve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensitive"
                android:textColor="@color/gray"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/dry_skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dry"
                android:textColor="@color/gray"
                android:textSize="12dp" />
            <RadioButton
                android:id="@+id/compnation_skin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textColor="@color/gray"
                android:textSize="12dp" />
        </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/hair"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hair_type"
                android:textColor="@color/green"
                android:textSize="13dp" />


            <RadioGroup
                android:id="@+id/redio_hair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:textColor="@color/pink">

                <RadioButton
                    android:id="@+id/dry_haie_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dry_h"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />

                <RadioButton
                    android:id="@+id/sensitve_hair_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensitive_h"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />

                <RadioButton
                    android:id="@+id/oil_hair_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oil_h"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />

                <RadioButton
                    android:id="@+id/compnation_hair_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_h"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/wether"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/wether_string"
                android:textColor="@color/blue"
                android:textSize="13dp" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:textColor="@color/pink">

                <RadioButton
                    android:id="@+id/hot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hot"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />

                <RadioButton
                    android:id="@+id/dry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dry"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />

                <RadioButton
                    android:id="@+id/rotoba"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rotoba"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
                <RadioButton
                    android:id="@+id/rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rain"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

        <ImageView
            android:id="@+id/image_mask"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15sp"
            android:src="@drawable/icon_loade_image" />


        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:hint="@string/title"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:hint="@string/description_mask"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/compont"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:hint="@string/content"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="10dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:scaleType="center"
                android:text="Add Item"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/blue"
            android:divider="@color/gray"
            android:padding="10dp"
            android:textDirection="@integer/default_circle_indicator_orientation"
            android:visibility="visible" />

        <Button
            android:id="@+id/lode_contentin_firebase"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/group_pink123"
            android:scaleType="center"
            android:text="Add"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>
</ScrollView>
