<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FBF1F1"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.SigninActivity">




    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:background="@drawable/login_background"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:text="@string/name"
                android:padding="10dp"
                android:textSize="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:background="@drawable/pink_border_rect"
                android:layout_height="55dp">

                <ImageView
                    android:src="@drawable/icon_person_24"
                    android:layout_width="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="25dp"/>

                <EditText
                    android:id="@+id/edit_name_sign"
                    android:textColorHint="@color/gray"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/hint_name"
                    android:layout_height="50dp"/>

            </LinearLayout>



            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:textSize="15dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:background="@drawable/pink_border_rect"
                android:layout_height="55dp">

                <ImageView
                    android:src="@drawable/icon_email_24"
                    android:layout_width="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="25dp"/>

                <EditText
                    android:id="@+id/edit_email_sign"
                    android:textColorHint="@color/gray"
                    android:textSize="13dp"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_marginRight="20dp"
                    android:hint="@string/hint_email"
                    android:layout_height="50dp"/>

            </LinearLayout>

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:text="@string/age"
                android:textSize="15dp"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:background="@drawable/pink_border_rect"
                android:layout_height="55dp">

                <ImageView
                    android:src="@drawable/icon_age"
                    android:layout_width="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="25dp"/>

                <EditText
                    android:id="@+id/edit_age_sign"
                    android:textColorHint="@color/gray"
                    android:textSize="13dp"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_marginRight="20dp"
                    android:hint="@string/hint_age"
                    android:layout_height="50dp"/>

            </LinearLayout>



            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:text="@string/pass"
                android:textSize="15dp"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:padding="5dp"
                android:background="@drawable/pink_border_rect"
                android:layout_height="55dp">

                <ImageView
                    android:src="@drawable/icon_pass"
                    android:layout_width="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="25dp"/>

                <EditText
                    android:id="@+id/edit_pass_sign"
                    android:textColorHint="@color/gray"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:inputType="textPassword"
                    android:layout_marginRight="20dp"
                    android:hint="@string/hint_password"
                    android:layout_height="50dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check_singin"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="#7A7979"
                    android:textSize="15sp"
                    android:text="@string/massage_error"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/singin_button"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:text="@string/singin"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="50dp"
                android:background="@color/black"
                android:layout_height="50dp"/>









        </LinearLayout>
    </ScrollView>
</LinearLayout>